# cookiecutter-rht-labs

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: setup.cfg  setup.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.sku}}/: __init__.py
