[metadata]
name = {{cookiecutter.project_slug}}
description = Red Hat Training Labs for Course {{cookiecutter.sku}}
url = https://github.com/RedHatTraining/{{cookiecutter.project_slug}}
long_description = file: README.md
long_description_content_type = text/markdown
author = Jim Rigsbee
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Students
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Training
    Topic :: Utilities
author-email = jrigsbee@redhat.com
keywords = training, labs
maintainer = Jim Rigsbee
maintainer-email = jrigsbee@redhat.com
project_urls =
    Source=https://github.com/RedHatTraining/rht-labs-core
    Tracker=https://github.com/RedHatTraining/rht-labs-core/issues

[options]
packages = find:
install_requires =
    rht-labs-core==2.0.5
    PyYAML>=5.3.1
    click>=7.1.2
    ansible>=2.9
    ansible-runner>=1.4.6
python_requires = >=3.6
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[sdist]
formats = gztar

[bdist_wheel]
universal = true
